lab1/Test/L1-A-0-61.output
Error Type A at Line 13
Error Type A at Line 37
Error Type A at Line 42
Error Type A at Line 55
Error Type A at Line 61
